--- a/package.json
+++ b/package.json
@@ -16,61 +16,63 @@
   },
   "authors": "Coderiver <html@coderiver.com.ua>",
   "devDependencies": {
-    "autoprefixer": "^9.4.10",
+    "autoprefixer": "^10.3.1",
     "babel-core": "^6.26.3",
     "babel-eslint": "^10.0.1",
-    "babel-loader": "^8.0.5",
+    "babel-loader": "^8.2.2",
     "babel-plugin-transform-runtime": "^6.23.0",
     "babel-preset-env": "^1.7.0",
     "babel-preset-es2015": "^6.24.1",
     "babel-runtime": "^6.26.0",
-    "browser-sync": "^2.26.3",
+    "browser-sync": "^2.27.5",
     "css-mqpacker": "^7.0.0",
-    "del": "^4.0.0",
-    "eslint": "^5.15.1",
-    "eslint-config-airbnb": "^17.1.0",
-    "eslint-formatter-pretty": "^2.1.1",
+    "del": "^6.0.0",
+    "eslint": "^7.32.0",
+    "eslint-config-airbnb": "^18.2.1",
+    "eslint-formatter-pretty": "^4.1.0",
     "eslint-loader": "^2.1.2",
     "glslify-loader": "^2.0.0",
-    "gulp": "^4.0.0",
-    "gulp-changed": "^3.2.0",
-    "gulp-cheerio": "^0.6.3",
+    "gulp": "^4.0.2",
+    "gulp-changed": "^4.0.3",
+    "gulp-cheerio": "^1.0.0",
     "gulp-consolidate": "^0.2.0",
-    "gulp-filter": "^5.1.0",
+    "gulp-filter": "^7.0.0",
     "gulp-front-matter": "^1.3.0",
-    "gulp-git": "^2.9.0",
-    "gulp-if": "^2.0.2",
-    "gulp-include": "^2.3.1",
-    "gulp-notify": "^3.2.0",
-    "gulp-nunjucks-render": "^2.2.2",
+    "gulp-git": "^2.10.1",
+    "gulp-if": "^3.0.0",
+    "gulp-include": "^2.4.1",
+    "gulp-notify": "^4.0.0",
+    "gulp-nunjucks-render": "^2.2.3",
     "gulp-plumber": "^1.2.1",
-    "gulp-postcss": "^8.0.0",
+    "gulp-postcss": "^9.0.0",
     "gulp-prettify": "^0.5.0",
-    "gulp-rename": "^1.4.0",
-    "gulp-sass": "^4.0.2",
-    "gulp-sourcemaps": "^2.6.5",
-    "gulp-svgmin": "^2.1.0",
-    "gulp-svgstore": "^7.0.1",
+    "gulp-rename": "^2.0.0",
+    "gulp-sass": "^5.0.0",
+    "gulp-sourcemaps": "^3.0.0",
+    "gulp-svgmin": "^4.0.1",
+    "gulp-svgstore": "^8.0.0",
     "gulp-util": "^3.0.8",
-    "htmlhint": "^0.11.0",
-    "husky": "^1.3.1",
-    "jquery": "^3.3.1",
-    "lint-staged": "^8.1.5",
-    "lodash": "^4.17.11",
+    "htmlhint": "^0.15.1",
+    "husky": "^7.0.1",
+    "jquery": "^3.6.0",
+    "lint-staged": "^11.1.1",
+    "lodash": "^4.17.21",
     "lost": "^8.3.1",
-    "postcss-csso": "^3.0.0",
-    "raw-loader": "^1.0.0",
+    "postcss": "^8.3.6",
+    "postcss-csso": "^5.0.1",
+    "raw-loader": "^4.0.2",
     "require-dir": "^1.2.0",
     "require-yaml": "^0.0.1",
     "run-sequence": "^2.2.1",
-    "through2": "^3.0.1",
-    "webpack": "^4.29.6",
-    "webpack-bundle-analyzer": "^3.1.0"
+    "through2": "^4.0.2",
+    "webpack": "^5.48.0",
+    "webpack-bundle-analyzer": "^4.4.2"
   },
   "dependencies": {
-    "@babel/core": "^7.3.4",
+    "@babel/core": "^7.14.8",
     "gulp-hub": "^4.2.0",
-    "gulp-load-plugins": "^1.5.0",
-    "webpack-stream": "^5.2.1"
+    "gulp-load-plugins": "^2.0.7",
+    "sass": "^1.37.2",
+    "webpack-stream": "^6.1.2"
   }
 }
